--- a/packages/patch-diff/package.json
+++ b/packages/patch-diff/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.1",
+    "@types/jest": "^29.5.14",
     "@types/lodash-es": "^4.17.12",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
