migrate server package

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {},
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "author": "Barak Edry",
