migrate ws-server package

--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -5,6 +5,7 @@
   "main": "ws-server.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "peerDependencies": {
