migrate worket-socket and shared-worker-server

--- a/packages/worker-socket/package.json
+++ b/packages/worker-socket/package.json
@@ -5,6 +5,7 @@
   "main": "worker-socket.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "dependencies": {
