migrate worker-server package

--- a/packages/worker-server/package.json
+++ b/packages/worker-server/package.json
@@ -5,6 +5,7 @@
   "main": "worker-server.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "dependencies": {
