successful root build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,14 @@
     { "path": "./packages/message-channel-socket" },
     { "path": "./packages/utils" },
     { "path": "./packages/proxy" },
-    { "path": "./packages/patch-diff" }
+    { "path": "./packages/patch-diff" },
+    { "path": "./packages/client" },
+    { "path": "./packages/replica" },
+    { "path": "./packages/server" },
+    { "path": "./packages/worker-server" },
+    { "path": "./packages/worker-socket" },
+    { "path": "./packages/shared-worker-server" },
+    { "path": "./packages/lit" }
   ],
   "extends": "./tsconfig.base.json"
 }
