--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "bootstrap-install": "npm install && lerna bootstrap --no-ci",
     "bootstrap-ci": "npm ci && lerna bootstrap",
-    "build": "lerna run build --include-dependencies --stream",
+    "build": "lerna run build --stream",
     "test": "jest",
     "pack": "npm version patch && npm pack"
   },
@@ -43,6 +43,7 @@
     "jest": "latest",
     "lerna": "6.6.2",
     "lit": "latest",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "ws": "^8.18.0"
