--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.base.json",
   "files": [],
   "references": [
     { "path": "./packages/common" },
@@ -16,6 +17,5 @@
     { "path": "./packages/worker-socket" },
     { "path": "./packages/shared-worker-server" },
     { "path": "./packages/lit" }
-  ],
-  "extends": "./tsconfig.base.json"
+  ]
 }
