--- a/packages/patch-diff/tsconfig.json
+++ b/packages/patch-diff/tsconfig.json
@@ -7,7 +7,7 @@
     "declarationMap": true,
     "types": ["jest"]
   },
-  "include": ["src/**/*.ts", "__tests__/**/*.ts"],
+  "include": ["src/**/*.ts", "__tests__/**/*.ts", "index.ts"],
   "references": [
     { "path": "../utils" },
     { "path": "../events" }
