--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.23.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.3",
+    "@types/ws": "^8.18.1",
     "babel-jest": "^29.7.0",
     "jest": "latest",
     "lerna": "6.6.2",
@@ -49,7 +50,7 @@
     "ws": "^8.18.0"
   },
   "dependencies": {
-    "@msgpack/msgpack": "latest",
+    "@msgpack/msgpack": "^3.1.1",
     "lodash-es": "latest"
   },
   "main": "index.js",
