--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -5,11 +5,13 @@
   "main": "dist/proxy.js",
   "types": "dist/proxy.d.ts",
   "type": "module",
-  "dependencies": {},
   "scripts": {
     "test": "jest",
     "build": "tsc -p ."
   },
   "author": "Barak Edry",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "ts-jest": "^29.3.2"
+  }
 }
