more import/export fixes

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,6 +10,11 @@
     "declarationMap": true,
     "sourceMap": true,
     "composite": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "lib": [
+      "es2020",
+      "dom",
+      "webworker"
+    ]
   }
 } 
