fix proxy tests by using consistent proxy module import

--- a/packages/patch-diff/tsconfig.json
+++ b/packages/patch-diff/tsconfig.json
@@ -10,6 +10,7 @@
   "include": ["src/**/*.ts", "__tests__/**/*.ts", "index.ts"],
   "references": [
     { "path": "../utils" },
-    { "path": "../events" }
+    { "path": "../events" },
+    { "path": "../proxy" }
   ]
 } 
