--- a/packages/lit/tsconfig.json
+++ b/packages/lit/tsconfig.json
@@ -7,6 +7,7 @@
   "include": ["*.ts"],
   "exclude": ["dist", "node_modules"],
   "references": [
-    { "path": "../client" }
+    { "path": "../client" },
+    { "path": "../proxy" }
   ]
 }
