--- a/packages/cluster-master-server/package.json
+++ b/packages/cluster-master-server/package.json
@@ -5,7 +5,7 @@
   "main": "cluster-master-server.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build",
     "test": "jest"
   },
   "dependencies": {
