--- a/packages/events/package.json
+++ b/packages/events/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "build": "tsc -p ."
+    "build": "tsc --build"
   },
   "author": "Barak Edry",
   "license": "Apache-2.0"
