--- a/packages/socketio-client/package.json
+++ b/packages/socketio-client/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "build": "tsc -p ."
+    "build": "tsc --build"
   },
   "dependencies": {
       "@live-replica/socket": "*",
