--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,7 +6,7 @@
   "types": "dist/utils.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc -p ."
+    "build": "tsc --build"
   },
   "author": "",
   "license": "Apache-2.0",
