--- a/packages/worker-server/package.json
+++ b/packages/worker-server/package.json
@@ -5,7 +5,7 @@
   "main": "worker-server.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build",
     "test": "jest"
   },
   "dependencies": {
