--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -5,7 +5,7 @@
   "main": "ws-server.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build",
     "test": "jest"
   },
   "peerDependencies": {
