--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "bootstrap-install": "npm install && lerna bootstrap --no-ci",
     "bootstrap-ci": "npm ci && lerna bootstrap",
-    "build": "lerna run build --stream",
+    "build": "lerna run build --stream && tsc --build",
     "test": "jest --detectOpenHandles",
     "pack": "npm version patch && npm pack"
   },
@@ -53,7 +53,7 @@
     "@msgpack/msgpack": "^3.1.1",
     "lodash-es": "latest"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
   "types": "./packages/types/index.d.ts",
   "bundleDependencies": [
     "@msgpack/msgpack",
